fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#78C953</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
                <color>#E27001</color>
                <label>Ready for Approval</label>
            </value>
            <value>
                <fullName>PRF In Process</fullName>
                <color>#A845DC</color>
                <label>PRF In Process</label>
            </value>
            <value>
                <fullName>Waiting on Approval</fullName>
                <color>#F3D904</color>
                <label>Waiting on Approval</label>
            </value>
            <value>
                <fullName>Waiting for Contracts Approval</fullName>
                <color>#A53711</color>
                <label>Waiting for Contracts Approval</label>
            </value>
            <value>
                <fullName>Waiting For RSM Approval</fullName>
                <color>#66E9BD</color>
                <label>Waiting For RSM Approval</label>
            </value>
            <value>
                <fullName>Waiting on Director Level Approval</fullName>
                <color>#0B24BE</color>
                <label>Waiting on Director Level Approval</label>
            </value>
            <value>
                <fullName>Waiting on VP Level Approval</fullName>
                <color>#419249</color>
                <label>Waiting on VP Level Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#B6E32E</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#33CC00</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>