fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrow Interventional</fullName>
            </value>
            <value>
                <fullName>Arrow International</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Eaches</fullName>
            </value>
            <value>
                <fullName>Arrow</fullName>
            </value>
            <value>
                <fullName>Teleflex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>