fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Price Quotes</relationshipLabel>
    <relationshipName>Price_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>