fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Total_Without_Trade_Ins__c.field-meta.xml
<CustomField>
    <fullName>Total_Without_Trade_Ins__c</fullName>
    <description>Field used to calculate total of Vascular Bundles before trade-ins added.</description>
    <inlineHelpText>Field used to calculate total of Vascular Bundles before trade-ins added.</inlineHelpText>
    <label>Total Without Trade-In(s)</label>
    <summarizedField>Price_Quote_Line_Item__c.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Quote_Line_Item__c.Sales_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Quote_Line_Item__c.Price_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>