fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Field is used by the LATAM busines unit to assist in determining the purpose of the Price Quote.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spa General Sales</fullName>
            </value>
            <value>
                <fullName>Special Sales</fullName>
            </value>
            <value>
                <fullName>Sales Per Each</fullName>
            </value>
            <value>
                <fullName>ASK Agreement</fullName>
            </value>
            <value>
                <fullName>Trade-in</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
                <isActive>false</isActive>
                <label>Tender</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>