fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/validationRules/Account_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Change</fullName>
    <active>true</active>
    <description>Ensures that a user does not change the Account on a Price Quote that already has line items.</description>
    <errorConditionFormula>AND( 
ISCHANGED( Account_Name__c ), 
Line_Count__c &gt; 0 
)</errorConditionFormula>
    <errorMessage>You cannot change a quote Account name once line items have been added.</errorMessage>
</ValidationRule>