fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/validationRules/Account_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Check</fullName>
    <active>true</active>
    <description>This validation rule enforces that Price Quote&apos;s cannot be created without an Account.</description>
    <errorConditionFormula>ISBLANK(Account_Name__c)</errorConditionFormula>
    <errorMessage>Account Required to Create Price Quote. Please make sure you are creating the Price Quote from the Pricing Portal menu.</errorMessage>
</ValidationRule>