fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/validationRules/Restrict_ExpirationDate_change_for_EMEA.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_ExpirationDate_change_for_EMEA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
BusinessUnit__c=&apos;EMEA&apos; ,
Expiration_Date__c != DATEVALUE(&apos;2023-12-31&apos;),
Expiration_Date__c != DATEVALUE(&apos;2024-12-31&apos;),
ISCHANGED(Expiration_Date__c)
)</errorConditionFormula>
    <errorMessage>Please note that you can only change the date to 31/12/2023 or 31/12/2024</errorMessage>
</ValidationRule>