fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/listViews/All_Quotes_Created_Today.listView-meta.xml
<ListView>
    <fullName>All_Quotes_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Sales_Org_Key__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Commit_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>~All Quotes Created Today</label>
    <language>en_US</language>
    <sharedTo>
        <role>Teleflex_Global_IT</role>
    </sharedTo>
</ListView>