fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/listViews/Alternate_Care_Below_RSM_1st_Level_Price_Quote.listView-meta.xml
<ListView>
    <fullName>Alternate_Care_Below_RSM_1st_Level_Price_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Alternate Care Below RSM 1st Level</label>
    <queue>Alternate_Care_Below_RSM_1st_Level</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>