fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/listViews/Alternate_Care_Below_RSM_2nd_Level_Resp_Price_Quote.listView-meta.xml
<ListView>
    <fullName>Alternate_Care_Below_RSM_2nd_Level_Resp_Price_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Alternate Care Below RSM 2nd Level Resp</label>
    <queue>Alternate_Care_Below_RSM_2nd_Level_Resp</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>