fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/listViews/Anesthesia_Below_Director_Cost_Level_Price_Quote.listView-meta.xml
<ListView>
    <fullName>Anesthesia_Below_Director_Cost_Level_Price_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Anesthesia Below Director/Cost Level</label>
    <queue>Anesthesia_Below_Director_Cost_Level</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>