fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/listViews/Canada_Alt_Care_Urology_Below_Cost_Price_Quote.listView-meta.xml
<ListView>
    <fullName>Canada_Alt_Care_Urology_Below_Cost_Price_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Canada Alt Care/Urology Below Cost</label>
    <queue>Canada_Alt_Care_Urology_Below_Cost</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>