fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/listViews/Contracts_Canada_Team_Price_Quote.listView-meta.xml
<ListView>
    <fullName>Contracts_Canada_Team_Price_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Contracts Canada Team</label>
    <queue>Contracts_Canada_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>