fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/listViews/Contracts_Cardiac_Team_Price_Quote.listView-meta.xml
<ListView>
    <fullName>Contracts_Cardiac_Team_Price_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Contracts Cardiac Team</label>
    <queue>Contracts_Cardiac_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>